--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,13 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');
 
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, Lato,  sans-serif;
 }
 
 a {
@@ -17,8 +18,4 @@ a {
 
 * {
   box-sizing: border-box;
-}
-@font-face {
-  font-family: "burtons";
-  src: url("../public/Burtons.otf");
 }
